--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
-name: End-to-end tests
+name: End-to-end tests 🧪
 on: [push]
 jobs:
-   cypress-run:
-      runs-on: 
-       steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-         # Install NPM dependecies, cache them correctly
-         # and run all Cypress testes
-        - name: Cypress run
-          uses: cypress-io/github-actions@v2  
+  cypress-run:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
